 * Implemented the "Failed Conditions" opacity setting for meta icons.
 * Slightly reworked the import dropdown to more accurately detect the group being edited, and to disallow importing of a data type where that data type is not being edited.
 * Added buttons to the icon editor to allow easy switching between recently edited icons.
 * Bug Fixes:
 ** (r356) Attempted a fix for default.lua:70 attempt to concatenate global 'input' (a table value)
 ** (r358) Icons tracking multiple elements whose start times are exactly the same should now properly update their timers when the first element gives yield to the second after timer expiration.
 ** (r358) Attempted a fix for TellMeWhen_Options.lua:2163: attempt to index upvalue 'HELP' (a nil value)
 ** (r360) If a meta icon is directly checking another meta icon, and the meta icon being checked changes the icon that is is checking, the meta icon checking the other meta icon should now properly update its inherited settings.
 ** (r365) Buff/Debuff icons tracking the "Enrage" dispel type only should now always show the correct texture in configuration.
 ** (r368) Lightwell glyph detection was apparently a little iffy. Added some manual checks in case the events don't fire when they should.
 ** (r370) The "ReducedArmor" equivalency should now track raptors' "Tear Armor" debuff properly.
 ** (r372) TellMeWhen_Options-r369.lua:278 attempt to index local "f" (a nil value)
 ** (r378) Icon flashers should now work properly without Masque.
 ** (r379) Fixed a bug that was preventing importing from a group in which the first icon is blank.
 ** (r379) Fixed (kinda) the status bar when exporting large pieces of data from TMW's Ace options dialogs.
 ** (r380) TellMeWhen-r379.lua:1803 bad argument #2 to "format" (number expected, got nil)
 
===v4.7.2===
 * New Icon Type: Lightwell
 * Condition icons now use the Custom Texture editbox to select their texture instead of the Choose Name editbox (for consistency)